# pier

./: .dkr  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  mkdocs.yml  package-lock.json  package.json  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  swarm-mission.md
.github/workflows/: ci.yml  docs.yml  publish-npm.yml  publish-pypi.yml
docs/: index.md
docs/architecture/: adr-001-integration-approach.md  adr-002-communication-protocol.md  adr-003-dogfooding-strategy.md  config-propagation-matrix.md  index.md  overview.md  pier-architecture.excalidraw  pier-integration-spec.md
docs/blog/: index.md
docs/developer-guide/: adrs.md  architecture.md  contributing.md  index.md
docs/reference/: index.md  pi-ecosystem-guide.md  pi-lean-ctx-research.md
docs/reports/: docker-extension-test.md  dogfooding-docker.md  dogfooding-final.md  dogfooding-phase1-results.md  dogfooding-results.md  integration-test-layer1.md  integration-test-layer2.md  integration-test-rpc.md
docs/research/: competitive-integration-landscape.md  hermes-coding-agent-patterns.md  index.md  pi-architecture-deep-dive.md
docs/user-guide/: getting-started.md  index.md  install.md  pi-extension-setup.md  pi-extensions.md  plugins.md  skills.md
pier/: __init__.py  plugin.py
plugins/pier/: __init__.py  event_parser.py  plugin.yaml  rpc_client.py
skills/pier/: SKILL.md
tests/: test_plugin.py  test_rpc_bridge.py
tests/plugins/: test_event_parser.py  test_pier_plugin.py  test_rpc_client.py
